fix the overflow and set line height

--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -21,6 +21,7 @@
 }
 
 .limitTextHeight {
-  height: 20px;
+  height: 30px;
   overflow: hidden;
+  line-height: 1.6;
 }
