--- a/src/styles.css
+++ b/src/styles.css
@@ -114,3 +114,6 @@ footer {
   width: 100%;
   padding: 2rem 0;
 }
+.p-card .p-card-footer {
+  padding: 1rem 0 0 0 !important;
+}
